<resources>
    <string name="app_name">Brain Challenge</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="game_menu_text">Game menu</string>
    <string name="private_score_text">Private score</string>
    <string name="global_score_text">Global score</string>
    <string name="stage_three_edit_text">Enter number here.</string>
    <string name="submit">Submit</string>
    <string name="stage_no_3">Stage No.3</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="stage_no_4">Stage No.4</string>
    <string name="turn_off_the_light">Turn off the light</string>
    <string name="light_intensity">"Light intensity: "</string>
    <string name="light_intensity_0">Light intensity：0</string>
    <string name="logout">Logout</string>
    <string name="first_input_notification">Please input the first number you find!</string>
    <string name="second_input_notification">Please input the second number you find!</string>
    <string name="result_input_notification">Now, calculate the sum of the previous two numbers and enter the result.</string>
    <string name="test">Test</string>
    <string name="your_highest_score">Your Highest Score</string>
    <string name="startgame">StartGame</string>
    <string name="stage_no_2">Stage No.2</string>
    <string name="find_the_coins">Find the coins!</string>
</resources>