<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_marginEnd="319dp"
        android:background="@null"
        android:padding="20dp"
        android:src="@drawable/logout"
        android:contentDescription="@string/logout" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true">
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/game_menu_text"
        android:id="@+id/btnGameMenu"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:textSize="20sp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/private_score_text"
        android:id="@+id/btnPrivateScore"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:textSize="20sp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/global_score_text"
        android:id="@+id/btnGlobalScore"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:textSize="20sp"
        />

</LinearLayout>

</RelativeLayout>